tests/NormalTests/paczka1/small_fuzzy/72332559.err
Error in line 1: S123 S123 5,9
Error in line 12: D3Rsp22Q S888 93,9
Error in line 14: BCXBUFfGV S888 12,7
